@@ -384,8 +384,8 @@ g_m(X_{mi})^\top\right)^\top h(\Y_i, (\Y_1, \dots, \Y_n))^\top \right).
 However, this approach is less attractive for learning samples with
 missing values. Universally applicable approaches are multiple test 
 procedures based on $P_1, \dots, P_m$. 
-Simple Bonferroni-adjusted $P$-values $m
-P_j$, available via 
+Simple Bonferroni-adjusted $P$-values ($mP_j$ prior to version 0.8-4, now $1
+- (1 - P_j)^m$ is used), available via 
 <<party-Bonf, echo = TRUE, results = hide>>=
 ctree_control(testtype = "Bonferroni")
 @
@@ -739,7 +739,9 @@ plot(gtree)
 @
 \caption{Conditional inference tree for the glaucoma data. For each inner node, the
 Bonferroni-adjusted $P$-values are given, the fraction of glaucomatous eyes
-is displayed for each terminal node. \label{glaucoma}}
+is displayed for each terminal node. (Note: node 7 was not splitted prior to
+version 0.8-4 because of using another formulation of the
+Bonferroni-adjustment.) \label{glaucoma}}
 
 <<glaucoma-plot-inner, echo = FALSE, fig = TRUE, height = 7, width = 10>>=
 plot(gtree, inner_panel = node_barplot, 
